# strategy

./: Cargo.toml
src/: main.rs  main2.rs  model.rs  renderer.rs  renderer2.rs  shader.wgsl  texture.rs
