[package]
name = "rts"
version = "0.1.0"
authors = ["Jonah <jonah@biorender.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "0.8"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
rand = "*"
slab = "0.4"
